--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,15 @@ name: Daniel Tull
 opensourcetitle: Open Source Code
 opensourcenames: ['Resurrection Kit', 'DTNibHook', 'DTGridView', 'DTMusicModel']
 opensourceurls: ['http://bitbucket.org/danielctull/dtresurrectionkit', 'http://bitbucket.org/danielctull/dtnibhook', 'http://bitbucket.org/danielctull/dtgridview/', 'http://bitbucket.org/danielctull/dtmusicmodel/']
+
+apptitle: Apps
+appnames: ['Weather Maps','Sky+']
+appurls: ['http://www.twitter.com/danielctull','http://bitbucket.org/danielctull/']
+
+abouttitle: All About Me
+aboutnames: ['Contact Details']
+abouturls: ['/contact/']
+
+servicetitle: Find me on
+servicenames: ['Twitter','BitBucket','Stack Overflow','Google Reader','Flickr','LinkedIn']
+serviceurls: ['http://www.twitter.com/danielctull','http://bitbucket.org/danielctull/','http://stackoverflow.com/users/155863/daniel-tull','http://www.google.com/reader/shared/06047137066122335809','http://www.flickr.com/photos/18319588@N00/','http://uk.linkedin.com/in/danieltull']
