--- a/_config.yml
+++ b/_config.yml
@@ -14,5 +14,5 @@ aboutnames: ['Contact Details']
 abouturls: ['/contact/']
 
 servicetitle: Find me on
-servicenames: ['Twitter','BitBucket','Stack Overflow','Google Reader','Flickr','LinkedIn']
-serviceurls: ['http://www.twitter.com/danielctull','http://bitbucket.org/danielctull/','http://stackoverflow.com/users/155863/daniel-tull','http://www.google.com/reader/shared/06047137066122335809','http://www.flickr.com/photos/18319588@N00/','http://uk.linkedin.com/in/danieltull']
+servicenames: ['Twitter']
+serviceurls: ['http://www.twitter.com/danielctull']
