--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,7 @@ name: Daniel Tull
 opensourcetitle: Open Source Code
 opensourcenames: ['Resurrection Kit', 'DTNibHook', 'DTGridView', 'DTMusicModel']
 opensourceurls: ['http://bitbucket.org/danielctull/dtresurrectionkit', 'http://bitbucket.org/danielctull/dtnibhook', 'http://bitbucket.org/danielctull/dtgridview/', 'http://bitbucket.org/danielctull/dtmusicmodel/']
+
+servicetitle: Find me on
+servicenames: []
+serviceurls: []
