--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,11 @@ opensourceurls: ['http://bitbucket.org/danielctull/dtresurrectionkit', 'http://b
 servicetitle: Find me on
 servicenames: []
 serviceurls: []
+
+apptitle: Apps
+appnames: []
+appurls: []
+
+abouttitle: About
+aboutnames: []
+abouturls: []
