Adding apps to the config.

--- a/_config.yml
+++ b/_config.yml
@@ -10,8 +10,8 @@ servicenames: []
 serviceurls: []
 
 apptitle: Apps
-appnames: []
-appurls: []
+appnames: ['Weather Maps', 'Sky+']
+appurls: ['http://www.weathermapsapp.com/', 'http://itunes.apple.com/gb/app/sky/id301250225?mt=8']
 
 abouttitle: About
 aboutnames: []
