--- a/_config.yml
+++ b/_config.yml
@@ -6,8 +6,8 @@ opensourcenames: ['Resurrection Kit', 'DTNibHook', 'DTGridView', 'DTMusicModel']
 opensourceurls: ['http://bitbucket.org/danielctull/dtresurrectionkit', 'http://bitbucket.org/danielctull/dtnibhook', 'http://bitbucket.org/danielctull/dtgridview/', 'http://bitbucket.org/danielctull/dtmusicmodel/']
 
 servicetitle: Find me on
-servicenames: []
-serviceurls: []
+servicenames: ['Twitter']
+serviceurls: ['http://www.twitter.com/danielctull']
 
 apptitle: Apps
 appnames: ['Weather Maps', 'Sky+']
